feat: Added registering of MSAL users and disply welcome message

--- a/FlaskWebProject/templates/index.html
+++ b/FlaskWebProject/templates/index.html
@@ -1,8 +1,10 @@
 {% extends "layout.html" %}
 
 {% block content %}
+
 <div>
     <div class="row" style="margin-top: 25px;">
+        <h2>Welcome {{ current_user.username }}</h2>
         <table class="table">
             <thead class="thead-dark">
                 <tr>
